[package]
name = "axum-subconverter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
walkdir = "2"
axum = "0.5.15"
hyper = "0.14"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tracing = "0.1.29"
tracing-subscriber = { version="0.3.3", features = ["env-filter"] }
reqwest = { version = "0.11",default-features=false, features = ["json"] }
clap = { version = "3.2.2", features = ["derive", "env", "wrap_help", "unstable-v4"] }


[features]
default = ["rustls-tls"]
rustls-tls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]
native-tls-vendored = ["reqwest/native-tls-vendored"]


[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
